syntax="proto3";

package place;

option java_multiple_files = true;
option java_package = "com.wandersmart.grpc.place";

service PlaceService {
  rpc GetPlaceById (PlaceRequest) returns (PlaceResponse);
}

message PlaceRequest {
  string place_id = 1;
}

message PlaceResponse {
  string place_id = 1;
  string name = 2;
  double rating = 3;
  int32 price_level = 4;
  repeated string opening_hours = 5;
  repeated string photos = 6;
  double latitude = 7;
  double longitude = 8;
}